buttons finished, card component added

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -8,5 +8,5 @@ import Layout from "../layouts/Layout.astro";
   <Welcome />
   <Button size="md" color="primary">Primary Button</Button>
   <Button size="lg" color="secondary">Large Secondary Button</Button>
-  <Button color="tertiary">Default Size Tertiary Button</Button>
+  <Button size="sm" color="tertiary">Small Tertiary Button</Button>
 </Layout>
