card created, header added with mobile controls

--- a/src/components/Welcome.astro
+++ b/src/components/Welcome.astro
@@ -2,4 +2,6 @@
 
 ---
 
-<div class="font-geist m-4 p-2 text-3xl bg-primary-400 shadow-md rounded-lg">test</div>
+<div class="font-title m-4 rounded-lg bg-primary-400 p-2 text-3xl shadow-md">
+  test
+</div>
