added sample alert

--- a/src/components/Welcome.astro
+++ b/src/components/Welcome.astro
@@ -2,6 +2,6 @@
 
 ---
 
-<div class="font-title m-4 rounded-lg bg-primary-400 p-2 text-3xl shadow-md">
+<div class="m-4 rounded-lg bg-primary-400 p-2 font-title text-3xl shadow-md">
   test
 </div>
