--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,8 +1,10 @@
 ---
 import Alert from "../components/alert.astro";
+import Hero from "../components/hero.astro";
 import Layout from "../layouts/Layout.astro";
 ---
 
 <Layout>
-<Alert />
+  <Alert />
+  <Hero />
 </Layout>
