--- a/src/components/hero.astro
+++ b/src/components/hero.astro
@@ -2,10 +2,10 @@
 import Button from "./ui/button";
 ---
 
-<section class="flex items-center justify-center bg-white py-8 md:py-20 bg">
+<section class="flex items-center justify-center bg-white py-8 md:py-20">
   <div class="flex flex-col items-center justify-center">
     <h1
-      class="text-center font-title text-xl sm:text-3xl md:text-6xl lg:text-8xl"
+      class="text-center font-title text-2xl sm:text-3xl md:text-6xl lg:text-8xl"
     >
       Blank Photography
     </h1>
