--- a/src/components/sampleGallery.astro
+++ b/src/components/sampleGallery.astro
@@ -5,7 +5,7 @@ import { Image } from "astro:assets";
 
 <section class="flex flex-col items-center justify-center px-4 py-8 md:py-20">
   <h2 class="mb-10 text-center font-title text-xl sm:text-2xl md:text-5xl">
-    Sample Work
+    Latest Work
   </h2>
   <div class="flex flex-col items-center justify-center gap-8 lg:flex-row">
     <Card
