added more black

--- a/src/components/footer.astro
+++ b/src/components/footer.astro
@@ -1,9 +1,14 @@
 ---
+
 ---
-<footer class="mt-auto bg-gray-100 border-t border-gray-300 py-4 text-center">
-    <p>&copy; {new Date().getFullYear()}</p>
-    <p>
-      Powered by <a href="https://astro.build" class="text-blue-500 hover:underline">Astro</a>
-    </p>
-  </footer>
-  
+
+<footer class="mt-auto py-10 flex justify-center bg-black text-center text-white">
+  <p>&copy; {new Date().getFullYear()}</p>
+  <p>
+    Powered by <a
+      href="https://www.dillonwalsh.com"
+      target="_blank"
+      class="text-blue-500 hover:underline">Dillonpw</a
+    >
+  </p>
+</footer>
