--- a/src/pages/gallery/index.astro
+++ b/src/pages/gallery/index.astro
@@ -8,18 +8,13 @@ import FullGallery from "../../components/fullGallery.astro";
   <Alert />
 
   <section
-    class="flex flex-col items-center justify-center bg-white pb-8 pt-16 md:py-20"
+    class="flex flex-col items-center justify-center  pb-8 pt-16 md:py-20"
   >
     <h1
       class="text-center font-title text-2xl sm:text-3xl md:text-6xl lg:text-8xl"
     >
       Gallery
     </h1>
-    <p
-      class="lg:py-18 py-4 text-center font-content text-sm sm:py-6 sm:text-lg md:py-10 md:text-xl"
-    >
-      Take a look at my work.
-    </p>
     <FullGallery />
   </section>
 </Layout>
