--- a/src/components/hero.astro
+++ b/src/components/hero.astro
@@ -4,7 +4,7 @@ const heroText = "Blank Photography";
 const heroSubText = "Photographer with a passion for architecture";
 ---
 
-<section class="flex items-center justify-center bg-white py-8 md:py-20">
+<section class="flex items-center justify-center bg-gray-950 text-white py-8 md:py-20">
   <div class="flex flex-col items-center justify-center">
     <h1
       class="text-center font-title text-2xl sm:text-3xl md:text-6xl lg:text-8xl"
